--- a/ose-master-kickstart-vm.cfg.template
+++ b/ose-master-kickstart-vm.cfg.template
@@ -40,6 +40,8 @@ yum update -y
 yum install -y wget git net-tools bind-utils bind-chroot iptables-services bridge-utils
 yum install -y docker
 yum install -y python-virtualenv gcc
-yum install -y ansible
+yum -y install https://dl.fedoraproject.org/pub/epel/7/x86_64/e/epel-release-7-5.noarch.rpm
+sed -i -e "s/^enabled=1/enabled=0/" /etc/yum.repos.d/epel.repo
+yum -y --enablerepo=epel install ansible
 %end
 reboot
