--- a/ose-install.cfg
+++ b/ose-install.cfg
@@ -15,14 +15,15 @@ deployment_type=openshift-enterprise
 openshift_master_identity_providers=[{'name': 'htpasswd_auth', 'login': 'true', 'challenge': 'true', 'kind': 'HTPasswdPasswordIdentityProvider', 'filename': '/etc/origin/openshift-passwd'}]
 
 # default domain
-osm_default_subdomain=apps.example.com
+openshift_master_default_subdomain=apps.example.com
 
-openshift_master_api_port=8443
-openshift_master_console_port=8443
+# Metrics and logging
+openshift_hosted_metrics_deploy=true
+openshift_master_logging_public_url=https://kibana.example.com
 
 # host group for masters
 [masters]
-openshift.example.com openshift_node_labels="{'region': 'primary', 'zone': 'default'}" openshift_scheduleable=True
+openshift.example.com openshift_node_labels="{'region': 'infra', 'zone': 'default'}" openshift_scheduleable=True
 # host group for nodes, includes region info
 [nodes]
-openshift.example.com openshift_node_labels="{'region': 'primary', 'zone': 'default'}"
+openshift.example.com openshift_node_labels="{'region': 'infra', 'zone': 'default'}"
