--- a/ose-node-kickstart-vm.cfg.template
+++ b/ose-node-kickstart-vm.cfg.template
@@ -28,13 +28,13 @@ subscription-manager register --username='RHN_USERNAME' --password='RHN_PASSWORD
 echo "Attaching OpenShift Enterprise subscription."
 subscription-manager attach --pool=POOL_ID
 subscription-manager repos --disable="*"
-subscription-manager repos --enable="rhel-7-server-rpms" --enable="rhel-7-server-extras-rpms" --enable="rhel-7-server-optional-rpms" --enable="rhel-7-server-ose-3.2-rpms"
+subscription-manager repos --enable="rhel-7-server-rpms" --enable="rhel-7-server-extras-rpms" --enable="rhel-7-server-optional-rpms" --enable="rhel-7-server-ose-3.3-rpms"
 echo "Installing additional software."
 yum install -y deltarpm
 yum update -y
-yum install -y wget git net-tools bind-utils bind-chroot iptables-services bridge-utils
-yum install -y docker
+yum install -y wget git net-tools bind-utils bind-chroot iptables-services bridge-utils bash-completion
+yum install -y docker-1.10.3
 yum install -y python-virtualenv gcc
-yum install -y ansible
+yum install -y atomic-openshift-utils
 %end
 reboot
