Update docker lvg-name, removed installation steps already done by ansible-playbook.

--- a/ose-install.cfg
+++ b/ose-install.cfg
@@ -11,6 +11,9 @@ ansible_ssh_user=root
 product_type=openshift
 deployment_type=openshift-enterprise
 
+# Use containerized install
+#containerized=true
+
 # enable htpasswd authentication
 openshift_master_identity_providers=[{'name': 'htpasswd_auth', 'login': 'true', 'challenge': 'true', 'kind': 'HTPasswdPasswordIdentityProvider', 'filename': '/etc/origin/openshift-passwd'}]
 
@@ -19,6 +22,7 @@ openshift_master_default_subdomain=apps.example.com
 
 # Metrics and logging
 openshift_hosted_metrics_deploy=true
+openshift_hosted_logging_deploy=true
 openshift_master_logging_public_url=https://kibana.example.com
 
 # host group for masters
